--- a/config/dev.config.env
+++ b/config/dev.config.env
@@ -1,5 +1,6 @@
 
 CONNECTION_URL_LOCAL = "mongodb://localhost:27017/ecommerce-dev" 
+CONNECTION_URL_HOST = "mongodb+srv://mohamed1122:mo573573mo@cluster0.vxyflva.mongodb.net/ecommerce-production" 
 PORT = "3000"
 SALT_ROUNDS = "8"
 
@@ -25,3 +26,6 @@ MAIN_FOLDER_UPLOAD = ecommerce-project
 JWT_SECRET_VERFICATION = jyg3);urrh
 
 JWT_SECRET_LOGIN = testkhf%hdu3#
+
+
+REST_SIGNTCHER="sjhcbdj"
