--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": "v20.9.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,12 +20,15 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "joi": "^17.9.2",
+    "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.1",
+    "luxon": "^3.4.4",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.8",
+    "pdfkit": "^0.15.0",
     "slugify": "^1.6.6"
   }
 }
